[gd_scene load_steps=4 format=3 uid="uid://c4c4p87eotulc"]

[ext_resource type="Script" path="res://addons/rivet/devtools/backend/panel.gd" id="1_ydecy"]
[ext_resource type="Script" path="res://addons/rivet/devtools/elements/process_manager.gd" id="2_dolt5"]
[ext_resource type="PackedScene" uid="uid://v3rf8tpycjfv" path="res://addons/rivet/devtools/elements/process_logs.tscn" id="3_lqccm"]

[node name="Panel" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ydecy")

[node name="ProcessManager" type="Node" parent="." node_paths=PackedStringArray("logs")]
unique_name_in_owner = true
script = ExtResource("2_dolt5")
logs = NodePath("../ProcessLogs")

[node name="ProcessLogs" parent="." instance=ExtResource("3_lqccm")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
init_message = "Press start to start backend server."

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2

[node name="Start" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start"

[node name="Stop" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Stop"

[node name="Restart" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Restart"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ClearLogs" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Clear"

[node name="OpenLogs" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Open in File Manager"

[connection signal="process_status_changed" from="ProcessManager" to="." method="_on_process_manager_process_status_changed"]
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Stop" to="." method="_on_stop_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/ClearLogs" to="." method="_on_clear_logs_pressed"]
[connection signal="pressed" from="VBoxContainer/OpenLogs" to="." method="_on_open_logs_pressed"]
